--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
  <!--  <link rel="stylesheet" href="styles.css"> -->
 </head>
 
 <body>
-<p> "Hello Wordl" </p>
+  
+  <nav class="navbar">
+    <div class="nav-logo">placeholder web</div>
+    <ul class="nav-link">
+      <li><a href="#">placesshssssold1</a></li>
+      <li><a href="#">placehold1</a></li>
+      <li><a href="#">placehold1</a></li>
+    </ul>
+    
+
+  </nav>
 <!--  <script src="scripts.js"></script> -->
 </body>
 
