Added basic html outline, still have to fill in info

--- a/exp.html
+++ b/exp.html
@@ -19,7 +19,7 @@
   </nav>
 
   
-  <section id="exp" style="display: none;">
+  <section id="exp" >
     <h1>Welcome to My Webssssite!</h1>
     <p>This is a brief introduction about me.</p>
   </section>
