Added basic html template, still need to fill in

--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
   </nav>
 
   <section id="overview">
-    <h1>Welcome to My Website!</h1>
-    <p>This is a brief introduction about me.</p>
+    <h1>Bio</h1>
+    <p></p>
+    <h1>Interests</h1>
+    <p></p>
+    <h1>What I'm currently working on</h1>
+
   </section>
-  <section id="exp" style="display: none;">
-    <h1>Welcome to My Webssssite!</h1>
-    <p>This is a brief introduction about me.</p>
-  </section>
-  <section id="contact" style="display: none;">
-    <h1>Welcome to My Website!ssss</h1>
-    <p>This is a brief introduction about me.</p>
-  </section>
+  
 
   <script src="script.js"></script>
 </body>
