--- a/exp.html
+++ b/exp.html
@@ -20,8 +20,12 @@
 
   
   <section id="exp" >
-    <h1>Welcome to My Webssssite!</h1>
+    <h1>WExperience and Expertise</h1>
     <p>This is a brief introduction about me.</p>
+    <h2>Skills</h2>
+    <h2>Education</h2>
+    <h2>Job experience</h2>
+    <h2>Volunteer work</h2>
   </section>
  
 
