commented in placeholders for future elemnets such a s pcitures which will be build upon in future branches

--- a/exp.html
+++ b/exp.html
@@ -20,11 +20,18 @@
 
   
   <section id="exp" >
+    <!--add main pic here-->
+    <!--add emote here-->
     <h1>WExperience and Expertise</h1>
+    <!--add emote here-->
     <p>This is a brief introduction about me.</p>
+    <!--add emote here-->
     <h2>Skills</h2>
+    <!--add emote here-->
     <h2>Education</h2>
+    <!--add emote here-->
     <h2>Job experience</h2>
+    <!--add emote here-->
     <h2>Volunteer work</h2>
   </section>
  
