--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </nav>
 
   <section id="overview">
+    <!--add picture here-->
+    <!--add emote here-->
     <h1>Bio</h1>
     <p></p>
     <h1>Interests</h1>
