commented in placeholders for future elemnets such a   s pcitures which will be build upon in future branches and also fixed html tag formatting slightly to later add text.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
       <li><a href="contact.html">contact</a></li>
     </ul>
   </nav>
-
+  commented in placeholders for future elemnets such a
+  s pcitures which will be build upon in future branches
   <section id="overview">
+    <!--add main picture of headshot-->
+    <h1>Harman Bhogal</h1>
+    <!--add emote here-->
     <h1>Bio</h1>
     <p></p>
+    <!--add emote here-->
     <h1>Interests</h1>
     <p></p>
+    <!--add emote here-->
     <h1>What I'm currently working on</h1>
+    <p></p>
 
   </section>
   
