--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,20 @@
     </Ul>
     <!--add emote-->
     <h2>contact info</h2>
-    <h3></h3>
+    <h3>Proffesional Social Applications</h3>
     <ul>
+      <li>www.linkedin.com/in/harman-bhogal-b2b532350</li>
+      <li>https://github.com/HarmanB1</li>
+      <li>https://x.com/HarmanBhogal3</li>
+      <li>https://discord.com/users/relaxi#0137</li>
 
     </ul>
-    <h3></h3>
-    <ul></ul>
+
+    <h3>Other contact infol</h3>
+    <ul>
+      <li>bhogalharman7@gmail.com</li>
+      <li>phone number: 604 356 4654</li>
+    </ul>
 
 
 
