Fixed minor wording.

--- a/exp.html
+++ b/exp.html
@@ -30,9 +30,10 @@
     <h2>Skills</h2>
     <p>
       Programming Languages: C++, C, Python, HTML, CSS
-Knowledgeable in Word, Excel. Personal and management
-Personal and management skills:Socializing, Leadership, Planning, Independent, Time management Words per minute: 90
+     Knowledgeable in Word, Excel. Personal and management
+Personal and management skills:Socializing, Leadership, Planning, Independent, Time management 
 Standard First Aid with CPR-C/AED
+Words per minute: 90
 Languages: Fluent in English, proficient oral understanding of Punjabi and Hindi, basic French reading and writing skills
     </p>
     <!--add emote here-->
