--- a/contact.html
+++ b/contact.html
@@ -22,26 +22,36 @@
   <section id="contact" >
     <h1>contact page</h1>
 
-
-
+    
+    <!--add main picture-->
     <p>I’d love to hear from you! Whether you have a question, want 
       to collaborate on a project, or just want to say hi, feel free to reach out. 
       You can contact me through the form below or via email and social media.
        I’ll do my best to get back to you as soon as possible!
     </p>
+    <!--add emote prefferably clock-->
     <h2>Availbitly</h2>
     <Ul>
       <li><p>Monday, Wednesday, Thursday: 9 AM – 6 PM </p></li>
       <li><p>Tuesday,Saturday: Limited availability</p></li>
       <li><p>unabailble</p></li>
     </Ul>
+    <!--add emote-->
     <h2>contact info</h2>
-    <h3></h3>
+    <h3>Proffesional Social Applications</h3>
     <ul>
+      <li>www.linkedin.com/in/harman-bhogal-b2b532350</li>
+      <li>https://github.com/HarmanB1</li>
+      <li>https://x.com/HarmanBhogal3</li>
+      <li>https://discord.com/users/relaxi#0137</li>
 
     </ul>
-    <h3></h3>
-    <ul></ul>
+
+    <h3>Other contact infol</h3>
+    <ul>
+      <li>bhogalharman7@gmail.com</li>
+      <li>phone number: 604 356 4654</li>
+    </ul>
 
 
 
