--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="imgs/favi.png">
   <link rel="stylesheet" href="styles.css">
  <!--  <link rel="stylesheet" href="styles.css"> -->
 </head>
@@ -22,6 +23,7 @@
 
     <!--add emote here-->
     <h1>Bio</h1>
+    <img src="imgs/View recent photos.jpeg">
     <p>Hi, I’m Harman Bhogal, a second-year Computer Science student at Simon Fraser University (SFU). My passion for coding and problem-solving has been a key part of my academic journey. While I’m skilled in various programming languages, C++ is my preferred method of solving any problem. </p>
 
      <p> Alongside my studies, I work as a math tutor for younger children. Teaching has been an incredibly rewarding experience, and allows me to gain a deeper understanding of my local community. </p>
