--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="imgs/favi.png">
   <link rel="stylesheet" href="styles.css">
  <!--  <link rel="stylesheet" href="styles.css"> -->
 </head>
