Added images and formatted them. Added image to navbar.

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
   
   <nav class="navbar">
-    <div class="nav-logo">placeholder web</div>
+   <img src="imgs/favi.png" class="nav-logo2">
     <ul class="nav-link">
         <li><a href="index.html">Overview</a></li>
         <li><a href="exp.html">Experience and Expertise</a></li>
@@ -38,6 +38,7 @@
       <li><p>unabailble</p></li>
     </Ul>
     <!--add emote-->
+    <img src="imgs/Call-icon-on-transparent-background-PNG.png">
     <h2>contact info</h2>
     <h3>Proffesional Social Applications</h3>
     <ul>
