--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   
   <nav class="navbar">
-    <div class="nav-logo">placeholder web</div>
-    <ul class="nav-link">
+    <img src="imgs/favi.png" class="nav-logo2">
       <li><a href="index.html">Overview</a></li>
       <li><a href="exp.html">Experience and Expertise</a></li>
       <li><a href="contact.html">contact</a></li>
@@ -47,7 +46,9 @@
     <!--add emote here-->
     <h2>Interest</h2>
     <p>Movies: <a href="https://boxd.it/2xOqX" >Letterboxd</a></p>
+    <img src="imgs/Screenshot 2025-02-13 at 2.01.55 AM.png" class="film">
     <p>Chess: <a href="https://www.chess.com/home">Chess</a></p>
+    <img src="imgs/how-to-set-up-a-chessboard-6.jpg" class = "chess">
     
 
   </section>
