--- a/exp.html
+++ b/exp.html
@@ -11,7 +11,7 @@
 <body>
   
   <nav class="navbar">
-    <div class="nav-logo">placeholder web</div>
+    <img src="imgs/favi.png" class="nav-logo2">
     <ul class="nav-link">
       <li><a href="index.html">Overview</a></li>
       <li><a href="exp.html">Experience and Expertise</a></li>
