--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <nav class="navbar">
     <img src="imgs/favi.png" class="nav-logo2">
+    <ul class="nav-link">
       <li><a href="index.html">Overview</a></li>
       <li><a href="exp.html">Experience and Expertise</a></li>
       <li><a href="contact.html">contact</a></li>
@@ -22,7 +23,7 @@
 
     <!--add emote here-->
     <h1>Bio</h1>
-    <img src="imgs/View recent photos.jpeg">
+    <img src="imgs/View recent photos.jpeg" class="my_photo">
     <p>Hi, I’m Harman Bhogal, a second-year Computer Science student at Simon Fraser University (SFU). My passion for coding and problem-solving has been a key part of my academic journey. While I’m skilled in various programming languages, C++ is my preferred method of solving any problem. </p>
 
      <p> Alongside my studies, I work as a math tutor for younger children. Teaching has been an incredibly rewarding experience, and allows me to gain a deeper understanding of my local community. </p>
