added final clock image

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
        I’ll do my best to get back to you as soon as possible!
     </p>
     <!--add emote prefferably clock-->
-    <h2>Availbitly</h2>
+    <div><img src="imgs/download.png" class="clock"><h2 class="nextto_clock">Availbitly</h2></div>
+    
     <Ul>
       <li><p>Monday, Wednesday, Thursday: 9 AM – 6 PM </p></li>
       <li><p>Tuesday,Saturday: Limited availability</p></li>
