Added a unique colour scheme that is visually appealing. Also fixed some small typos.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul class="nav-link">
       <li><a href="index.html">Overview</a></li>
       <li><a href="exp.html">Experience and Expertise</a></li>
-      <li><a href="contact.html">contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   
@@ -41,7 +41,7 @@
     <p>
       Goal: After learning these applications, specifically the Python libraries, my eventual goal is to build an application that unlocks a device—specifically a Windows laptop—through user gestures.
     </p>
-    
+
     <!--add emote here-->
     <h2>Interest</h2>
     <p>Movies: <a href="https://boxd.it/2xOqX" >Letterboxd</a></p>
