--- a/exp.html
+++ b/exp.html
@@ -15,7 +15,7 @@
     <ul class="nav-link">
       <li><a href="index.html">Overview</a></li>
       <li><a href="exp.html">Experience and Expertise</a></li>
-      <li><a href="contact.html">contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
