--- a/exp.html
+++ b/exp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="imgs/favi.png">
+  <link rel="icon" type="image/png" href="imgs/favi.png" alt="Photo of a H and B together on a brown background">
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -11,7 +11,7 @@
 <body>
   
   <nav class="navbar">
-    <img src="imgs/favi.png" class="nav-logo2">
+    <img src="imgs/favi.png" class="nav-logo2" alt="Photo of a H and B together on a brown background">
     <ul class="nav-link">
       <li><a href="index.html">Overview</a></li>
       <li><a href="exp.html">Experience and Expertise</a></li>
