--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/Screenshot 2025-06-10 at 3.20.26 PM.png" />
+    <link rel="icon" type="image/svg+xml" href="/path.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HB Developer Portfolio</title>
   </head>
